[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/BaseCharacter.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/GUI/nameBorder.png" type="Texture" id=3]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CapsuleShape" id=3]

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 2 )

[node name="BaseCharacter" type="KinematicBody"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="SoundPlayer" type="AudioStreamPlayer3D" parent="."]
unit_db = 20.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
shape = SubResource( 3 )

[node name="Name" type="Control" parent="."]
margin_left = -25.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Name"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = 10.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Name/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -12.5
margin_right = 21.0
margin_bottom = 12.5
custom_fonts/font = SubResource( 4 )
text = "You"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Name/TextureRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
